--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=weatherapp
 server.port=8080
 
 # OpenWeatherMap API key
-openweathermap.api.key=40325ce830476d61252f03634633e3d0
+openweathermap.api.key=NUM
 openweathermap.api.url=http://api.openweathermap.org/data/2.5/weather
